fixing topbar on mobile

--- a/main.css
+++ b/main.css
@@ -318,7 +318,7 @@ footer a:hover {
 
   .dropdown-content {
     width: 100vw;
-    display: fixed;
+    position: fixed;
   }
 
   .dropdown a {
